eks/backendService.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 4000    # External port to expose
    targetPort: 4000  # The port in the container
  type: ClusterIP
