eks/combinedService.yml
apiVersion: v1
kind: Service
metadata:
  name: combined
spec:
  selector:
    app: combined
  ports:
  - protocol: TCP
    port: 4000    # External port to expose
    targetPort: 4000  # The port in the container
  - protocol: TCP
    port: 3000    # External port to expose
    targetPort: 3000  # The port in the container
  type: ClusterIP
