eks/frontendService.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  ports:
  - protocol: TCP
    port: 3000    # Internal cluster port
    targetPort: 3000  # The port in the container
  type: ClusterIP
